# qtrpc

./: CMakeLists.txt  QtRpc.qbs
QtRpc/: CMakeLists.txt  MsgpackRpcProtocol.hpp  QRpcPeer.cpp  QRpcService.cpp  QtMsgpackAdaptor.hpp
QtRpc/include/: QRpcPeer.hpp  QRpcService.hpp
src/: QtRpc.qbs  msgpackrpcprotocol.h  qrpcpeer.cpp  qrpcpeer.h  qrpcrequest.cpp  qrpcrequest.h  qrpcresponse.cpp  qrpcresponse.h  qrpcservice.cpp  qrpcservice.h  qtmsgpackadaptor.h
tests/: CMakeLists.txt  tests.qbs
tests/auto/: CMakeLists.txt  test_rpc.cpp  test_rpc.qbs
